Add JSpecify Annotations (#500)
* Add jspecify annotations to shared

(cherry picked from commit bd3c63d90c7a93094f8b4072b868416ddcf3425a)

* Fix DecalType changes

(cherry picked from commit ee175a0aeb395348f1619d0ca71aade5e1b98f6b)

* More nullmarking

* Fix from rebase

* Fix from rebase

* Fix nullability

* Fix nullability

* Delete TestingGround

* Fix tests

* Fix determinisim issue

* Disable other error prone checks

* Fix test concurrency